[package]
name = "webpack-sources"
version = "0.2.5"
authors = ["Jevan Chan <jevan.cnchan@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
source-map-mappings = "0.5.0"
wasm-bindgen = "0.2"
serde = "1.0.59"
serde_derive = "1.0.59"
serde_json = "1.0.17"
linked-hash-map = "0.5.1"
vlq = "0.5.1"

[profile.release]
lto = true
